Adding in more Advanced Help documentation.

--- a/help/date-display.html
+++ b/help/date-display.html
@@ -13,6 +13,10 @@ print content_format('field_date', $node->field_date[0], 'iso');
 <dd>An alternative way to display this date, configured in the Date settings, defaults to the site medium format.</dd>
 <dt>long</dt>
 <dd>An alternative way to display this date, configured in the Date settings, defaults to the site long format.</dd>
+<dt>time</dt>
+<dd>Display the date time only, using the time format in the default display.</dd>
+<dt>time_timezone</dt>
+<dd>Display the date time and timezone, using the time format in the default display.</dd>
 <dt>iso</dt>
 <dd>Display the date in the standard ISO format of YYYY-MM-DDTHH:MM:SS.</dd>
 <dt>ical</dt>
