#426810 Fix HTML syntax in advanced help files, patch by plach.

--- a/help/date-types.html
+++ b/help/date-types.html
@@ -4,7 +4,7 @@
 <dl>
 <dt>Datestamp (Unix Timestamp)</dt>
 <dd><ul>
-<li>Stores the date as an integer.</dd>
+<li>Stores the date as an integer.</li>
 <li>Takes up less room in the database because it's smaller.</li>
 <li>Often easier to use for date calculations because you can increase or decrease it just by adding or subtracting seconds.</li>
 <li>It is the format used by php date functions.</li>
